--- a/soilprofile/assets/report/styles.css
+++ b/soilprofile/assets/report/styles.css
@@ -37,7 +37,7 @@ h1{
   margin-right:1rem;
 }
 
-h2{
+h2,h3{
   text-align: center;
 }
 
@@ -67,4 +67,8 @@ td, th {
 
 tr:nth-child(even) {
   background-color: #dddddd;
+}
+
+.pointContainer{
+  display:flex;
 }
