Improvements on the html report

--- a/soilprofile/assets/report/styles.css
+++ b/soilprofile/assets/report/styles.css
@@ -1,33 +1,94 @@
-body{
-  font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+html,body{
+ margin:0;
+ padding:0;
+ height:100%;
+ width:100%;
+ font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; 
+ overflow-x: hidden;
 }
 
-#body {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    align-items: center;
+#body{
+	margin-left:1rem;
+	margin-right:1rem;
 }
 
-#mainContainer{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.pointContainer{
+	display:flex;
+	flex-direction:row;
+	overflow-x: auto;	
 }
 
 #header{
-  width: 100%;
   height: 8rem;
   background-color: #231f20;  
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+  width:100%;
 }
 
-#body{
+.logoProjeto,.logoIF{
+  height: 8.2rem;
+  width: auto;
+  image-rendering: pixelated;
+  margin-left: 1rem;
+}
+
+.logoContainer{
+  width: 40rem;
+}
+
+.containerProjeto{
+  text-align:left;
+  margin-left:1rem;
+}
+
+.containerIF{
+  text-align:right;
+  margin-right:1rem;
+}
+
+.logo{
+  height: 8rem;
+  width: auto;
+}
+
+#title{
+  color: white;
+}
+
+h1,h2,h3,h4,h5{
+  text-align: center;
+}
+
+h2{
+margin-top:2rem;
+}
+
+.tableContainer{
+  height: 20rem;
+  overflow-x: auto;
+  overflow-y: scroll;  
   width: 100%;
 }
+
+td, th {  
+  text-align: left;
+  padding: 5px;
+}
+
+th{
+position: sticky;
+top: 0; 
+background:  #231f20;
+color:white;
+}
+
+tr:nth-child(even) {
+  background-color: #E5E8E8;
+}
+
 
 #footer{
 }
@@ -38,70 +99,51 @@ body{
   margin-right:1rem;
 }
 
-h1{
-  color: white;
-  margin-left:1rem;
-  margin-right:1rem;
-}
 
-h2,h3,h4,h5{
-  text-align: center;
-}
-
-.tableContainer{
-  width: 100%;
-  height: 20rem;
-  overflow: scroll;
-  border: solid 1px black;
-}
-
-#pointsContainer{
-
-}
-
-table {
-  width: 100%; 
-  font-family: arial, sans-serif;
+table{
+border: 1px solid #231f20;
   border-collapse: collapse;
-position: relative;
 }
 
-td, th {
-  border: 1px solid #dddddd;
-  text-align: left;
-  padding: 8px;
+.pointHeader{
+	background-color: #efefef;
+    	border: solid 1px;
 }
 
-th{
-position: sticky;
-top: 0; 
-background: white;
-}
-
-tr:nth-child(even) {
-  background-color: #dddddd;
-}
-
-.pointContainer{
-  display:flex;
-}
-
-.warningSign{
-  background-color:#f5cece;
-}
-
-#datasetPreviewWithoutLastRow tr > td:last-of-type {
-    color:red;
-}
-
-#datasetPreviewWithoutLastRow tr > th:last-of-type {
-    color:red;
+.pointHeader p{
+	margin-left:1rem 
 }
 
 .graph {
 	transform: rotate(90deg);
 }
 
-p{
-	font-size:1.2rem;
+table{
+    width: 100%;
+    overflow-x: auto;
+}
+
+
+#winners_table > tbody > tr > th{
+  width:2rem;
+}
+
+
+#winners_table{
+	width:50%
+}
+
+footer {
+background: #231f20;
+color:white;
+height: 5rem;
+align-items: center;
+    display: flex;
+    justify-content: center;
+flex-direction:column;
+}
+
+a:visited{
+text-decoration: none;
+	color:white;
 }
